--- a/frontend/src/pages/NotFound/NotFound.css
+++ b/frontend/src/pages/NotFound/NotFound.css
@@ -1,5 +1,3 @@
 .container {
-  width: 100%;
-  height: 80%;
-  background-image: url("https://static.vecteezy.com/system/resources/thumbnails/006/941/002/small/small-hexagon-shape-with-light-white-and-grey-color-seamless-pattern-background-free-vector.jpg");
+  background-image: url('https://static.vecteezy.com/system/resources/thumbnails/006/941/002/small/small-hexagon-shape-with-light-white-and-grey-color-seamless-pattern-background-free-vector.jpg');
 }
