--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,16 +1,13 @@
 .nav-conatiner {
-  z-index: 100;
   color: gray;
   font-weight: 600;
   font-size: 16px;
-
   padding-top: 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   position: sticky;
   top: 1px;
-  background-color: rgb(243, 247, 247);
 }
 
 .nav-logo img {
