--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,9 +5,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 nav {
   position: sticky;
   top: 1px;
+  background-color: white;
+  border-radius: 5px;
+  margin-top: 5px;
+  box-sizing: 5px 6px 7px rgba(0, 0, 0, 0.4);
 }
